--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
             </div>
         </section>
     </div>
-    <script src="app.js"></script>
+    <script src="APP.JS"></script>
 </body>
 </html>
